<resources>

    <string name="authority">in.ccl.database</string>

    <!-- Image Content Description -->
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="dot">dot</string>
    <!-- End Content Description -->
    <string name="app_name">CCL</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ccl_menu">CCL menu</string>
    <string name="ccl_logo">CCL logo</string>
    <string name="notification_title">NOTIFICATIONS </string>
    <string name="app_title">CELEBRITY CRICKET LEAGUE</string>
    <string name="banner_title">UPDATES</string>
    <string name="loading">Please wait, while loading&#8230;</string>
    <string name="log_folder">ccl-logs</string>
    <string name="log_file">CclLogFile</string>
    <string name="log_extension">txt</string>
    <string name="splash_loading_title">Loading&#8230;</string>
    <string name="photos_gallery">PHOTO GALLERY</string>
    <string name="videos_gallery">VIDEO GALLERY</string>
    <string name="image_error_msg">Unable to retrieve content at this moment</string>

    <!-- TODO: -->
    <string name="sample_notification">INDRAJIT SCORES A SIX</string>
    <!--  -->


    <!-- Menu Items -->
    <string name="home">HOME</string>
    <string name="news">NEWS</string>
    <string name="teams">TEAMS</string>
    <string name="team_title">TEAM</string>
    <string name="ambassadors_title">BRAND AMBASSADORS</string>
    <string name="photos">PHOTOS</string>
    <string name="videos">VIDEOS</string>
    <string name="ownerslounge">OWNER\'S LOUNGE</string>
    <string name="schedule">SCHEDULE</string>
    <string name="scores">SCORES</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="celebrity_calender">HOT CALENDER</string>
    <string name="livescore">LIVE SCORE</string>

    <!-- end of menu items -->
    <string name="owners_lounge">OWNERS LOUNGE</string>
    <string name="owners_info">VISHNU VARDHAN INDURI </string>
    <string name="proffession_info">FOUNDER AND MANAGINGDIRECTOR</string>
    <string name="network_error_message">No network available</string>

    <string-array name="director_names">
        <item>VISHNU VARDHAN INDURI  </item>
        <item>Mr. Sarath Kumar </item>
        <item>Mr. Tirumal Reddy</item>
        <item>Mr. Sreenivasulu Moorthy </item>
        <item>Mr. Ashok Kheny </item>
        <item>Mr. Sohail Khan </item>
        <item>Mr. Dr. R.R.Pujari </item>
    </string-array>

    <string name="director">Director</string>
    <string name="founder_director">Founder\nand\nManaging Director</string>
    <string name="owner_one_data_mumbai">A prominent film production and distribution company of full length feature films in Hindi. Produced many large format events and has organised exhibition matches in various sports with Bollywood artists in India and Abroad.</string>
    <string name="owner_lounge_kerala_one">Mr. Mohanlal, the four time National Films Award winning actor, the man with the Midas touch, the versatile actor, described by film fraternity as the most gifted; a star who always lived up to the expectations of his fans.</string>
    <string name="owner_lounge_kerala_two">Ms. Lissy\'s transition from one of the silver screen\'s favourite leading ladies to one of the cinemas most successful businesswoman was seamless.</string>
    <string name="owner_lounge_kerala_three">Mr. P.M. Shaji is the Managing Director of Cold Point Pvt. Ltd., a 33 year old company in the air conditioning industry, having a base of over 50,000 customers. It is the only company in its field with an ISO 9001:2008 Quality Certification.</string>
    <string name="regional_title">Regional</string>
    <string name="national_title">National</string>
    <string name="downloading_fail">Fail to DownloadImage .Please try again</string>
    <string name="downloading_succuss">Download  Completed Successfully</string>
    <string name="no_sdcard">Not available sdcard. Please insert the sdcard</string>
    <string name="downloading_image">Please wait, while downloading...</string>
    <string name="posting_message">Your image is being posted.</string>
    
    <!-- Teams -->
    <string name="mumbai">mumbai team</string>
    <string name="chennai">chennai-rhinos</string>
    <string name="telugu">telugu warriors</string>
    <string name="karanataka">karanataka-bulldozers</string>
    <string name="kerala">kerala-strikers</string>
    <string name="bengal">bengal-tigers</string>
    <string name="veer">veer-marathi</string>
    <string name="bhojpuri">bhojpuri-dabanggs</string>
    <string name="no_role">norole</string>

    <!-- End Teams -->
    <string name="ambassadors">Ambassadors</string>
    <string name="schedule_title">TENTATIVE SCHEDULE</string>
    <!-- Live score -->
    <string name="target">Target:</string>
    <string name="batting">BATTING</string>
    <string name="runs">RUNS</string>
    <string name="balls">BALLS</string>
    <string name="strikerate">STRIKE RATE</string>
    <string name="bowling">BOWLING</string>
    <string name="overs">OVERS</string>
    <string name="mdns">MDNS</string>
    <string name="wickets">WKTS</string>
    <string name="first_match">MATCH A</string>
    <string name="first_date">09 AUG</string>
    <string name="first_day">SATURDAY</string>
    <string name="liveScore">live score</string>
    <string name="second_match">MATCH B</string>
    <string name="second_date">09 AUG</string>
    <string name="second_day">SATURDAY</string>
    <string name="livematches">Live Matches</string>
    <string name="no_matches">No Live Match</string>
    <!-- end LiveScore -->


    <!-- ScoreBoard -->
    <string name="first_inns">1ST INNINGS</string>
    <string name="second_inns">2ND INNINGS</string>
    <string name="bowler">BOWLER</string>
    <string name="extras">EXTRAS</string>
    <string name="vs"> vs </string>
    <string name="wickets_score">WICKETS</string>
    <string name="hot_downloads">DOWNLOADS</string>
    <!-- end ScoreBoard -->


    <!-- end ScoreBoard -->

    <string name="error_title">Unable to retrieve content at this moment</string>
    <string name="owners_lounge_bhojpuri">AVIKA GROUP Ltd. is into diverse businesses like Information Technology, Marine Development, Airlines, Movies, Finance, Infrastructure and Sports . The company with its partners works with small, medium, and large firms, including many Fortune 1000 companies to help them solve business challenges.
\n\nThe Group is headquartered in the Central Business District of Mumbai with Regional offices in New Delhi, Bhopal and Chennai. Avika Group Ltd. has delivery, sales, support offices, consultant and sales partnerships with domain-expertise based consulting companies worldwide including Australia, USA, UK &amp; Hong Kong and development centers in Bhopal, Pune and Nashik.
\n\nRaise the Bar Together-with our Customers, Employees and Shareholders is the Avika Group Ltd. mantra. With a strong, reputed and experienced management team, we promote a solution oriented business culture and an excellent working environment through our focus on customer care.</string>
    <string name="signin">Facebook sign in</string>
    <string name="calender">HOT CALENDER</string>
    <string name="ok">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notification_messsage">Push Notifications must be allowed for notifications to work, Allow?</string>
    <string name="options_data_changed_not_saved_message">You have not saved your changed settings.Do you wish to save?</string>
    <string name="text_save">To save your settings</string>
    <string name="fielding">FIELDING</string>
    <string name="share">Share</string>

</resources>