<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/livematches" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/first_match" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/first_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/first_day" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/first_match_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/first_match_team_layout_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/first_match_logo_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/teluguwarriorsteams_logo" />

            <TextView
                android:id="@+id/first_match_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_match_logo_one"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Teluguwarriors" />

            <TextView
                android:id="@+id/first_match_team_name_vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_match_logo_one"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/first_match_team_name"
                android:padding="3dp"
                android:text="@string/vs"
                android:textColor="@android:color/background_light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/first_match_team_layout_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/first_match_team_layout_one" >

            <ImageView
                android:id="@+id/first_match_logo_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/teluguwarriorsteams_logo" />

            <TextView
                android:id="@+id/first_match_team_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_match_logo_two"
                android:layout_marginTop="10dp"
                android:text="Teluguwarriors" />

            <Button
                android:id="@+id/first_matches_livescore_btn"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_below="@id/first_match_logo_two"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/first_match_team_two"
                android:text="@string/liveScore" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/second_match" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/second_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/second_day" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/second_match_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/second_match_team_layout_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/second_match_logo_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/teluguwarriorsteams_logo" />

            <TextView
                android:id="@+id/second_match_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_match_logo_one"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Teluguwarriors" />

            <TextView
                android:id="@+id/second_match_team_name_vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_match_logo_one"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/second_match_team_name"
                android:padding="3dp"
                android:text="@string/vs"
                android:textColor="@android:color/background_light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_match_team_layout_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/second_match_team_layout_one"
            android:paddingBottom="20dp" >

            <ImageView
                android:id="@+id/second_match_logo_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/teluguwarriorsteams_logo" />

            <TextView
                android:id="@+id/second_match_team_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_match_logo_two"
                android:layout_marginTop="10dp"
                android:text="Teluguwarriors" />

            <Button
                android:id="@+id/second_matches_livescore_btn"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_below="@id/second_match_logo_two"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/second_match_team_two"
                android:text="@string/liveScore" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>