<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/owners_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/team_title"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/owners_lounge"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/logos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/content_bg" >

        <ImageView
            android:id="@+id/ownerview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/owner" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ownerview"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/owners_info"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/txt_proffession_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/proffession_info"
            android:textColor="@color/dark_grey" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent" />

    <ListView
        android:id="@+id/owners_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:dividerHeight="2dp" >
    </ListView>

</LinearLayout>