<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/home"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

        <!--     <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_news"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/news"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

      <!--       <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_teams"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_tems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/teams"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

           <!--  <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_videos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/videos"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

       <!--      <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_photos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/photos"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <!-- <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_ownerslounge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_owners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/ownerslounge"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

          <!--   <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_schedule"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/schedule"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <!-- <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_scores"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/scores"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

           <!--  <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" />
         --></RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_notifications"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/notifications"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <!-- <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_downloads"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#242a38" >

            <TextView
                android:id="@+id/txt_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:text="@string/downloads"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

           <!--  <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"
                android:src="@drawable/menu_goto" /> -->
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="1dp" />

        <RelativeLayout
            android:id="@+id/layout_dummy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

           <!--  <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip" /> -->
        </RelativeLayout>
    </LinearLayout>

